# pgcrate

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASING.md  docker-compose.yml  llms.txt
.github/workflows/: ci.yml
examples/ecommerce/: README.md  pgcrate.toml
examples/simple-app/: README.md  pgcrate.toml
examples/taskboard/: .env.example  README.md  pgcrate.anonymize.toml  pgcrate.snapshot.toml  pgcrate.toml
schemas/: action.schema.json  capabilities.schema.json  connections.schema.json  context.schema.json  envelope.schema.json  explain.schema.json  indexes.schema.json  locks.schema.json  queries.schema.json  sequences.schema.json  storage.schema.json  triage.schema.json  xid.schema.json
src/: actions.rs  anonymize.rs  config.rs  connection.rs  describe.rs  diagnostic.rs  diff.rs  doctor.rs  exit_codes.rs  help.rs  introspect.rs  main.rs  migrations.rs  output.rs  reason_codes.rs  redact.rs  seed.rs  snapshot.rs  sql.rs  suggest.rs  tips.rs
src/commands/: anonymize.rs  autovacuum_progress.rs  bloat.rs  bootstrap.rs  cache.rs  capabilities.rs  checkpoints.rs  config.rs  connections.rs  context.rs  db.rs  doctor.rs  explain.rs  extension.rs  mod.rs  (+17 more)
studio/: future.md
tests/: anonymize_integration.rs  describe_integration.rs  doctor_integration.rs  extension_integration.rs  generate_integration.rs  help_integration.rs  init_integration.rs  integration.rs  json_integration.rs  model_commands_integration.rs  role_integration.rs  snapshot_integration.rs  snapshot_profile_integration.rs  timeout_integration.rs
website/: README.md  index.html
(+87 files in other folders)
